# py-ecodyn

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
ecodyn/: __init__.py
tests/: test_ecodyn.py
