[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{name = "Jonas Reuter"}]
name = "ecodyn"
dynamic = ["version"]
description = "Population dynamics: logistic growth and Lotka-Volterra predator-prey (RK4)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[tool.flit.module]
name = "ecodyn"
